Document limitation: SMP users watch out.

--- a/README
+++ b/README
@@ -56,6 +56,10 @@ Finally, use 'bt' to produce the actual backtrace:
 
 Looks like LMMS is using some QT helper classes that are performing malloc()'s!
 
+== Limitations ==
+
+jack_interposer currently only works for single-CPU machines, or machines 
+configured to run the application under test on a single CPU.
 
 == Related applications ==
 
